Project

General

Profile

Actions

Bug #45866

closed

ceph-fuse build failure against libfuse v3.9.1

Added by Jeff Layton almost 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I got this, building master today against libfuse v3.9.1:

[ 61%] Building CXX object src/librbd/CMakeFiles/rbd_internal.dir/operation/SnapshotRollbackRequest.cc.o
/home/jlayton/git/ceph/src/client/fuse_ll.cc:1057:9: error: invalid conversion from ‘void (*)(fuse_req_t, fuse_ino_t, unsigned int, void*, fuse_file_info*, unsigned int, const void*, size_t, size_t)’ {aka ‘void (*)(fuse_req*, long unsigned int, unsigned int, void*, fuse_file_info*, unsigned int, const void*, long unsigned int, long unsigned int)’} to ‘void (*)(fuse_req_t, fuse_ino_t, int, void*, fuse_file_info*, unsigned int, const void*, size_t, size_t)’ {aka ‘void (*)(fuse_req*, long unsigned int, int, void*, fuse_file_info*, unsigned int, const void*, long unsigned int, long unsigned int)’} [-fpermissive]
 1057 |  ioctl: fuse_ll_ioctl,
      |         ^~~~~~~~~~~~~
      |         |
      |         void (*)(fuse_req_t, fuse_ino_t, unsigned int, void*, fuse_file_info*, unsigned int, const void*, size_t, size_t) {aka void (*)(fuse_req*, long unsigned int, unsigned int, void*, fuse_file_info*, unsigned int, const void*, long unsigned int, long unsigned int)}
make[2]: *** [src/CMakeFiles/ceph-fuse.dir/build.make:96: src/CMakeFiles/ceph-fuse.dir/client/fuse_ll.cc.o] Error 1

The problem is that FUSE_USE_VERSION is too low, so this isn't currently handled properly with later libfuse versions.


Related issues 2 (0 open2 closed)

Related to CephFS - Bug #45396: ceph-fuse: building the source code failed with libfuse3.5 or higher versionsResolvedXiubo Li

Actions
Copied to CephFS - Backport #45941: octopus: ceph-fuse build failure against libfuse v3.9.1ResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly almost 4 years ago

  • Target version set to v16.0.0
  • Source set to Development
  • Backport set to octopus
Actions #2

Updated by Patrick Donnelly almost 4 years ago

  • Related to Bug #45396: ceph-fuse: building the source code failed with libfuse3.5 or higher versions added
Actions #3

Updated by Jeff Layton almost 4 years ago

  • Pull request ID set to 35368
Actions #4

Updated by Patrick Donnelly almost 4 years ago

  • Status changed from New to Fix Under Review
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport

temporarily setting Pending Backport to get a backport issue created

Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45941: octopus: ceph-fuse build failure against libfuse v3.9.1 added
Actions #7

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Fix Under Review
Actions #8

Updated by Patrick Donnelly almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #9

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF